--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/StartUp.StartUp
-EditorStartupMap=/Game/Maps/StartUp.StartUp
+GameDefaultMap=/Game/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/Maps/StartupMap.StartupMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
